fix: changed image path

--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 Departamento de Ingeniería Eléctrica y Computación
 \vspace{20mm}
 
-\includegraphics [scale=0.7]{escudo-uacj} 
+\includegraphics [scale=0.7]{images/escudo-uacj} 
 \vspace{10mm}
 
 
@@ -62,8 +62,6 @@ Asesor:\\
 {[Nombre del asesor]}\\
 } \vfill
 	Ciudad Juárez, Chihuahua \hspace{70mm}\today
-
-%{\small \href{https://creativecommons.org/licenses/by/4.0/}{\includegraphics[height=1.2em]{cc-by}} by \theauthor}
 
 \end{center} 
 
