--- a/protocolo/references/misreferencias.bib
+++ b/protocolo/references/misreferencias.bib
@@ -13,6 +13,16 @@ ABSTRACT = {Food security has become an increasingly important challenge for all
 DOI = {10.3390/s21010223}
 }
 
+@misc{data_driven_decisions, 
+  title={The Advantages of Data-Driven Decision-Making: HBS Online}, 
+  url={https://online.hbs.edu/blog/post/data-driven-decision-making}, 
+  journal={Business Insights}, 
+  publisher={Harvard Business School}, 
+  author={Stobierski, Tim}, 
+  year={2019}, 
+  month={Aug}
+}
+
 @Article{Masahisa_ISHII2016,
   title={Controlled Environment Agriculture for Effective Plant Production Systems in a Semiarid Greenhouse},
   author={Masahisa ISHII and Sadanori SASE and Hideki MORIYAMA and Limi OKUSHIMA and Atsuo IKEGUCHI and Makio HAYASHI and Kenji KURATA and Chieri KUBOTA and Murat KACIRA and Gene A. GIACOMELLI},
@@ -23,6 +33,7 @@ DOI = {10.3390/s21010223}
   year={2016},
   doi={10.6090/jarq.50.101}
 }
+
 @article{RODRIGUEZ2017306,
 title = {A System for the Monitoring and Predicting of Data in Precision Agriculture in a Rose Greenhouse Based on Wireless Sensor Networks},
 journal = {Procedia Computer Science},
@@ -37,3 +48,165 @@ author = {Schubert Rodríguez and Tatiana Gualotuña and Carlos Grilo},
 keywords = {Wireless Sensor Networks, Data Mining, IOT, Precision Agriculture, Greenhouses},
 abstract = {In order to provide the best growing conditions for roses in a greenhouse, a Wireless Sensor Network has been designed and implemented that allows for agricultural environment data collection such as temperature, humidity and light. Each sensor node can transmit monitoring data to the cloud. Data mining techniques were used with the purpose of identifying behavioral patterns given the environment conditions captured by the sensor network. The operationalization of this research was taken as a case study within the rose greenhouses available to Universidad de las Fuerzas Armadas – ESPE, Ecuador.}
 }
+
+
+@Article{systematicreviewiot,
+author = {Navarro, Emerson and Costa, Nuno and Pereira, António},
+title = {A Systematic Review of IoT Solutions for Smart Farming},
+journal = {Sensors},
+volume = {20},
+year = {2020},
+number = {15},
+ARTICLE-NUMBER = {4231},
+URL = {https://www.mdpi.com/1424-8220/20/15/4231},
+ISSN = {1424-8220},
+ABSTRACT = {The world population growth is increasing the demand for food production. Furthermore, the reduction of the workforce in rural areas and the increase in production costs are challenges for food production nowadays. Smart farming is a farm management concept that may use Internet of Things (IoT) to overcome the current challenges of food production. This work uses the preferred reporting items for systematic reviews (PRISMA) methodology to systematically review the existing literature on smart farming with IoT. The review aims to identify the main devices, platforms, network protocols, processing data technologies and the applicability of smart farming with IoT to agriculture. The review shows an evolution in the way data is processed in recent years. Traditional approaches mostly used data in a reactive manner. In more recent approaches, however, new technological developments allowed the use of data to prevent crop problems and to improve the accuracy of crop diagnosis.},
+DOI = {10.3390/s20154231}
+}
+
+ @Misc{wik_pingali_brocai_2008, 
+  title={Global Agricultural Performance : Past Trends and Future Prospects}, 
+  url={https://openknowledge.worldbank.org/handle/10986/9122}, 
+  journal={Open Knowledge Repository},
+  publisher={Washington, DC: World Bank}, 
+  author={Wik, Mette and Pingali, Prabhu and Brocai, Sumiter}, 
+  year={2008}, 
+  month={Dec}
+} 
+
+@article{agriculture_automation_review,
+abstract = {Agriculture automation is the main concern and emerging subject for every country. The world population is in- creasing at a very fast rate and with increase in population the need for food increases briskly. Traditional methods used by farmers aren't sufficient enough to serve the increasing demand and so they have to hamper the soil by using harmful pesticides in an intensified manner. This affects the agricultural practice a lot and in the end the land remains barren with no fertility. This paper talks about different automation practices like IOT, Wireless Communications, Machine learning and Artificial Intelligence, Deep learning. There are some areas which are causing the problems to agriculture field like crop diseases, lack of storage management, pesti- cide control, weed management, lack of irrigation and water management and all this problems can be solved by above mentioned different techniques. Today, there is an urgent need to decipher the issues like use ofharm- ful pesticides, controlled irrigation, control on pollution and effects ofenvironment in agricultural practice. Auto- mation of farming practices has proved to increase the gain from the soil and also has strengthened the soil fertility. This paper surveys the work ofmany researchers to get a briefoverview about the current implementa- tion ofautomation in agriculture. The paper also discusses a proposed systemwhich can be implemented in bo- tanical farm for flower and leaf identification and watering using IOT.},
+author = {Jha, Kirtan and Doshi, Aalap and Patel, Poojan and Shah, Manan},
+doi = {10.1016/j.aiia.2019.05.004},
+file = {:Users/memo/Desktop/10.1016j.aiia.2019.05.004.pdf:pdf},
+issn = {25897217},
+journal = {Artificial Intelligence in Agriculture},
+keywords = {Automation artificial intelligence,Irrigation,Machine learning,automation arti fi cial,intelligence},
+number = {June},
+pages = {1--12},
+publisher = {Elsevier B.V.},
+title = {A comprehensive review on automation in agriculture using artificial intelligence},
+url = {https://doi.org/10.1016/j.aiia.2019.05.004},
+volume = {2},
+year = {2019}
+}
+
+@article{overview_iot_agriculture,
+abstract = {The surge in global population is compelling a shift toward smart agriculture practices. This coupled with the diminishing natural resources, limited availability of arable land, increase in unpredictable weather conditions makes food security a major concern for most countries. As a result, the use of Internet of Things (IoT) and data analytics (DA) are employed to enhance the operational efficiency and productivity in the agriculture sector. There is a paradigm shift from use of wireless sensor network (WSN) as a major driver of smart agriculture to the use of IoT and DA. The IoT integrates several existing technologies, such as WSN, radio frequency identification, cloud computing, middleware systems, and end-user applications. In this paper, several benefits and challenges of IoT have been identified. We present the IoT ecosystem and how the combination of IoT and DA is enabling smart agriculture. Furthermore, we provide future trends and opportunities which are categorized into technological innovations, application scenarios, business, and marketability.},
+author = {Elijah, Olakunle and Rahman, Tharek Abdul and Orikumhi, Igbafe and Leow, Chee Yen and Hindia, Mhd Nour},
+doi = {10.1109/JIOT.2018.2844296},
+file = {:Users/memo/Desktop/ANoverviewofinternetofthingsIoTandDataAnalyticsinAgricultureBenefitsandChallenges.pdf:pdf},
+issn = {23274662},
+journal = {IEEE Internet of Things Journal},
+keywords = {Agriculture,Internet of Things (IoT),IoT ecosystems,IoT in agriculture,IoT sensors,data analytics (DA),smart agriculture},
+number = {5},
+pages = {3758--3773},
+title = {An Overview of Internet of Things (IoT) and Data Analytics in Agriculture: Benefits and Challenges},
+volume = {5},
+year = {2018}
+}
+
+
+@Article{low_cost_fuzzy_logic_greenhouse,
+AUTHOR = {Robles Algarín, Carlos and Callejas Cabarcas, Jesús and Polo Llanos, Aura},
+TITLE = {Low-Cost Fuzzy Logic Control for Greenhouse Environments with Web Monitoring},
+JOURNAL = {Electronics},
+VOLUME = {6},
+YEAR = {2017},
+NUMBER = {4},
+ARTICLE-NUMBER = {71},
+URL = {https://www.mdpi.com/2079-9292/6/4/71},
+ISSN = {2079-9292},
+ABSTRACT = {The design and implementation of a low-cost system for monitoring and remote control of a greenhouse using fuzzy logic is presented. For the control system, an Arduino Mega board was programmed with a fuzzy algorithm to monitor and perform control actions for environmental temperature, soil moisture, relative humidity, and lighting. A website was designed to visualize the main indicators of agricultural interest and to get access to tools such as forced ventilation, misting systems, and sprinkler irrigation. For connectivity to the webpage, an Arduino Ethernet Shield was used. Thus, it was possible to establish a local area network and monitor and control the greenhouse climate variables manually or automatically. The application designed allowed access to the configuration, monitoring, and control of climatic conditions in the greenhouse. The effectiveness of fuzzy logic to control nonlinear systems was therefore verified without the mathematical model of the plant. Thus, the use of resources for a gable roof greenhouse prototype was optimized.},
+DOI = {10.3390/electronics6040071}
+}
+
+@article{Lambebo2014,
+abstract = {—The rapid development and miniaturization of sensor devices, and the recent advances in wireless communication and networking technologies, are allowing scientists and engineers to develop networks of small sensors that can be used to continuously monitor the health and stability of the environment we live in. Wireless Sensor Networks (WSNs) consist of a number of spatially distributed sensors with computing, processing and communication capabilities that can continuously sense and transmit data to a base station, where data can be processed and observed in real time. This project provides a detailed study and implementation of a WSN for real time and continuous environmental monitoring of greenhouse gases. A tree-topology WSN consisting of two sensor nodes and a base station was successfully built and tested using open source and inexpensive hardware to measure the concentration level of several greenhouse gases. The sensor nodes consisted of carbon monoxide sensor, a carbon dioxide sensor, a methane sensor, a temperature sensor, a GPS module and a ZigBee wireless transmitter packaged together. The GPS module was added to give information about the location of the sensors. The base stations consisted of an Arduino Uno micro-controller and a ZigBee receiver that can collect data from the various sensors and submit to a sink base station where data can be stored and processed. A website was developed where the captured data can be continuously monitored and displayed in real time. Keywords—Environmental Monitoring, IEEE 802.15., Wireless Sensor Networks, Wi-Fi, ZigBee Communication.},
+author = {Lambebo, Ashenafi and Haghani, Sasan},
+file = {:Users/memo/Desktop/199.pdf:pdf},
+isbn = {9781424442232},
+journal = {ASEE 2014 ZONE 1 Conference},
+keywords = {15,environmental monitoring,ieee 802,sensor networks,wi-fi,wireless,zigbee communication},
+pages = {4},
+title = {A Wireless Sensor Network for Environmental Monitoring of Greenhouse Gases},
+year = {2014}
+}
+
+@Article{appsremotesensing,
+AUTHOR = {Sishodia, Rajendra P. and Ray, Ram L. and Singh, Sudhir K.},
+TITLE = {Applications of Remote Sensing in Precision Agriculture: A Review},
+JOURNAL = {Remote Sensing},
+VOLUME = {12},
+YEAR = {2020},
+NUMBER = {19},
+ARTICLE-NUMBER = {3136},
+URL = {https://www.mdpi.com/2072-4292/12/19/3136},
+ISSN = {2072-4292},
+ABSTRACT = {Agriculture provides for the most basic needs of humankind: food and fiber. The introduction of new farming techniques in the past century (e.g., during the Green Revolution) has helped agriculture keep pace with growing demands for food and other agricultural products. However, further increases in food demand, a growing population, and rising income levels are likely to put additional strain on natural resources. With growing recognition of the negative impacts of agriculture on the environment, new techniques and approaches should be able to meet future food demands while maintaining or reducing the environmental footprint of agriculture. Emerging technologies, such as geospatial technologies, Internet of Things (IoT), Big Data analysis, and artificial intelligence (AI), could be utilized to make informed management decisions aimed to increase crop production. Precision agriculture (PA) entails the application of a suite of such technologies to optimize agricultural inputs to increase agricultural production and reduce input losses. Use of remote sensing technologies for PA has increased rapidly during the past few decades. The unprecedented availability of high resolution (spatial, spectral and temporal) satellite images has promoted the use of remote sensing in many PA applications, including crop monitoring, irrigation management, nutrient application, disease and pest management, and yield prediction. In this paper, we provide an overview of remote sensing systems, techniques, and vegetation indices along with their recent (2015&ndash;2020) applications in PA. Remote-sensing-based PA technologies such as variable fertilizer rate application technology in Green Seeker and Crop Circle have already been incorporated in commercial agriculture. Use of unmanned aerial vehicles (UAVs) has increased tremendously during the last decade due to their cost-effectiveness and flexibility in obtaining the high-resolution (cm-scale) images needed for PA applications. At the same time, the availability of a large amount of satellite data has prompted researchers to explore advanced data storage and processing techniques such as cloud computing and machine learning. Given the complexity of image processing and the amount of technical knowledge and expertise needed, it is critical to explore and develop a simple yet reliable workflow for the real-time application of remote sensing in PA. Development of accurate yet easy to use, user-friendly systems is likely to result in broader adoption of remote sensing technologies in commercial and non-commercial PA applications.},
+DOI = {10.3390/rs12193136}
+}
+
+
+@Article{app10217702,
+AUTHOR = {López Rivero, Alfonso José and Martínez Alayón, Carlos Andrés and Ferro, Roberto and Hernández de la Iglesia, Daniel and Alonso Secades, Vidal},
+TITLE = {Network Traffic Modeling in a Wi-Fi System with Intelligent Soil Moisture Sensors (WSN) Using IoT Applications for Potato Crops and ARIMA and SARIMA Time Series},
+JOURNAL = {Applied Sciences},
+VOLUME = {10},
+YEAR = {2020},
+NUMBER = {21},
+ARTICLE-NUMBER = {7702},
+URL = {https://www.mdpi.com/2076-3417/10/21/7702},
+ISSN = {2076-3417},
+ABSTRACT = {This article presents the results obtained by analyzing the data traffic that originated in a system with intelligent soil moisture sensors (Wireless Sensor Network&mdash;WSN) that transmit through a wireless network. This study sought to integrate smart agriculture and IoT (Internet of Things) applications in potato crops in various rural settings. Using these measurements, the data analysis was performed through the ARIMA (autoregressive integrated moving average model) and SARIMA (seasonal autoregressive integrated moving average model) time series following the Box&ndash;Jenkins methodology. GRETL (Gnu Regression, Econometrics and Time-series Library) free software was used to generate a teletraffic behavior prediction model in a larger-scale implementation. The main objective was the creation of a model that allows an analysis and simulation about the behavior of the main performance parameters that a medium-scale WSN system would have for the monitoring of a crop. Thanks to this analysis, it will be possible to determine the technical characteristics that a sensor deployment should have in a specific area and for a specific crop.},
+DOI = {10.3390/app10217702}
+}
+
+
+@Article{olive_orchard_monitorization,
+AUTHOR = {Varandas, Leonor and Faria, João and Gaspar, Pedro Dinis and Aguiar, Martim L.},
+TITLE = {Low-Cost IoT Remote Sensor Mesh for Large-Scale Orchard Monitorization},
+JOURNAL = {Journal of Sensor and Actuator Networks},
+VOLUME = {9},
+YEAR = {2020},
+NUMBER = {3},
+ARTICLE-NUMBER = {44},
+URL = {https://www.mdpi.com/2224-2708/9/3/44},
+ISSN = {2224-2708},
+ABSTRACT = {Population growth and climate change lead agricultural cultures to face environmental degradation and rising of resistant diseases and pests. These conditions result in reduced product quality and increasing risk of harmful toxicity to human health. Thus, the prediction of the occurrence of diseases and pests and the consequent avoidance of the erroneous use of phytosanitary products will contribute to improving food quality and safety and environmental land protection. This study presents the design and construction of a low-cost IoT sensor mesh that enables the remote measurement of parameters of large-scale orchards. The developed remote monitoring system transmits all monitored data to a central node via LoRaWAN technology. To make the system nodes fully autonomous, the individual nodes were designed to be solar-powered and to require low energy consumption. To improve the user experience, a web interface and a mobile application were developed, which allow the monitored information to be viewed in real-time. Several experimental tests were performed in an olive orchard under different environmental conditions. The results indicate an adequate precision and reliability of the system and show that the system is fully adequate to be placed in remote orchards located at a considerable distance from networks, being able to provide real-time parameters monitoring of both tree and the surrounding environment.},
+DOI = {10.3390/jsan9030044}
+}
+
+
+@Article{s20236747,
+AUTHOR = {Prodanović, Radomir and Rančić, Dejan and Vulić, Ivan and Zorić, Nenad and Bogićević, Dušan and Ostojić, Gordana and Sarang, Sohail and Stankovski, Stevan},
+TITLE = {Wireless Sensor Network in Agriculture: Model of Cyber Security},
+JOURNAL = {Sensors},
+VOLUME = {20},
+YEAR = {2020},
+NUMBER = {23},
+ARTICLE-NUMBER = {6747},
+URL = {https://www.mdpi.com/1424-8220/20/23/6747},
+ISSN = {1424-8220},
+ABSTRACT = {Nowadays, wireless sensor networks (WSN) are widely used in agriculture monitoring to improve the quality and productivity of farming. In this application, sensors gather different types of data (i.e., humidity, carbon dioxide level, and temperature) in real-time scenarios. Thus, data gathering, transmission, and rapid response to new circumstances require a secured data mechanism to avoid malicious adversaries. Therefore, this paper focuses on data security from the data origin source to the end-user, and proposes a general data security model that is independent of the network topology and structure, and can be widely used in the agriculture monitoring application. The developed model considers practical aspects, the architecture of the sensor node, as well as the necessity to save energy while ensuring data security, and optimize the model through the application of organizational and technical measures. The model evaluation is conducted through simulation in terms of energy consumption. The result shows that the proposed model ensures good data security at the cost of a slight increase in energy consumption at receiver and sender nodes, and energy consumption per bit, up to 2%, 7%, and 1.3%, respectively, due to overhead added for authentication in the network.},
+DOI = {10.3390/s20236747}
+}
+
+
+@Article{s20072081,
+AUTHOR = {Haseeb, Khalid and Ud Din, Ikram and Almogren, Ahmad and Islam, Naveed},
+TITLE = {An Energy Efficient and Secure IoT-Based WSN Framework: An Application to Smart Agriculture},
+JOURNAL = {Sensors},
+VOLUME = {20},
+YEAR = {2020},
+NUMBER = {7},
+ARTICLE-NUMBER = {2081},
+URL = {https://www.mdpi.com/1424-8220/20/7/2081},
+ISSN = {1424-8220},
+ABSTRACT = {Wireless sensor networks (WSNs) have demonstrated research and developmental interests in numerous fields, like communication, agriculture, industry, smart health, monitoring, and surveillance. In the area of agriculture production, IoT-based WSN has been used to observe the yields condition and automate agriculture precision using various sensors. These sensors are deployed in the agricultural environment to improve production yields through intelligent farming decisions and obtain information regarding crops, plants, temperature measurement, humidity, and irrigation systems. However, sensors have limited resources concerning processing, energy, transmitting, and memory capabilities that can negatively impact agriculture production. Besides efficiency, the protection and security of these IoT-based agricultural sensors are also important from malicious adversaries. In this article, we proposed an IoT-based WSN framework as an application to smart agriculture comprising different design levels. Firstly, agricultural sensors capture relevant data and determine a set of cluster heads based on multi-criteria decision function. Additionally, the strength of the signals on the transmission links is measured while using signal to noise ratio (SNR) to achieve consistent and efficient data transmissions. Secondly, security is provided for data transmission from agricultural sensors towards base stations (BS) while using the recurrence of the linear congruential generator. The simulated results proved that the proposed framework significantly enhanced the communication performance as an average of 13.5% in the network throughput, 38.5% in the packets drop ratio, 13.5% in the network latency, 16% in the energy consumption, and 26% in the routing overheads for smart agriculture, as compared to other solutions.},
+DOI = {10.3390/s20072081}
+}
+
+
+
+
