--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -1,410 +1,51 @@
-% !TEX encoding = UTF-8 Unicode
-% !TEX TS-program = xelatex
-%% This template licensed under CC-BY-NC-SA by Koenraad De Smedt
 \documentclass[final,12pt]{article}
+\usepackage[utf8]{inputenc}
 \usepackage[margin=24mm]{geometry}
-\usepackage{fontspec,xltxtra,polyglossia,titling,graphicx,dingbat}
-\usepackage[colorlinks,urlcolor=blue,citecolor=black,linkcolor=black]{hyperref}
-\setmainfont[Mapping=tex-text]{Times New Roman}
-\setdefaultlanguage{spanish}
+\usepackage{polyglossia,titling,graphicx,dingbat}
 \usepackage[numbers]{natbib}
 \usepackage{xspace}
+\usepackage{url}
+\usepackage[colorlinks,urlcolor=blue,citecolor=black,linkcolor=black]{hyperref}
 
-\usepackage[utf8]{inputenc}
+\setdefaultlanguage{spanish}
+
 \frenchspacing
+\hyphenation{unicode}
 
+\date{\today}
 \title{[TÍTULO DEL PROYECTO DE INVESTIGACIÓN]}
 \author{[Nombre del alumno]} 
-\date{\today}
-\hyphenation{unicode}
-\usepackage{url}
-\usepackage{hyperref}
 
-% \begin{document}
- 
- 
-% \maketitle
 
 \begin{document}
-	\thispagestyle{empty}
-\begin{center} \vfill
-{\Large UNIVERSIDAD AUTÓNOMA DE CIUDAD JUÁREZ}\\
-\vspace{6mm}
-{\large Instituto de Ingeniería y Tecnología\\
-\vspace{6mm}
-Departamento de Ingeniería Eléctrica y Computación
-\vspace{20mm}
-
-\includegraphics [scale=0.7]{images/escudo-uacj} 
-\vspace{10mm}
-
-
-% Clave: IEC982300B % replace with course code
-
-% Materia: Seminario de Titulación I % replace with course title
-
-% Semestre: Otoño 2017 % replace with term and year of the exam
-
-% Matrícula: 123456 \theauthor \vfill
-
-\thetitle\\
-\vspace{15mm}
-
-
-Protocolo de investigación presentado por:\\
-\vspace{6mm}
-\theauthor\hspace{10mm} [Matrícula]\\
-\vspace{10mm}
-Requisito para la obtención del título de\\
-\vspace{6mm}
-INGENIERO EN SISTEMAS COMPUTACIONALES\\
-\vspace{10mm}
-
-Asesor:\\
-{[Nombre del asesor]}\\
-} \vfill
-	Ciudad Juárez, Chihuahua \hspace{70mm}\today
-
-\end{center} 
+\include{capitulos/portada}
 
 \clearpage
 
-\tableofcontents
-\clearpage
-\listoffigures
-\clearpage
-\listoftables
-\clearpage
-
-\begin{abstract} \noindent
-En la actualidad existen asistentes de voz que son capaces de reconocer comandos o instrucciones a partir de la voz de las personas. Dichos asistentes son usados principalmente para tareas sencillas como búsquedas en Internet o agendas y aún son ineficientes a la hora de reconocer y procesar el contexto en una conversación. En este proyecto se propone implementar un asistente de voz con la capacidad de interpretar el lenguaje natural y seguir una conversación sin salirse de contexto, utilizando \textit{answer sets programming} (ASP). En este documento se muestra la descripción de los asistentes de voz más relevantes actualmente, se da una justificación del proyecto, la metodología, los objetivos generales y el coronograma de actividades a seguir para implementar un prototipo de asistente de voz.
-\end{abstract}
- 
-\include{Tex_files/Intro}
-
-
-\section{Planteamiento del problema}
-
-% \subsection{Antecedentes}
-\subsection{Sintesis}
-\subsubsection{A Cloud-Based IoT Platform for Precision Control of Soilless Greenhouse Cultivation}
-\begin{itemize}
-    \item \textbf{Problemática: }
-    La falta de agua y de mano de obra especializada ejerce una influencia negativa sobre la agricultura tradicional y la producción de alimentos. El problema empeora en países con tierra árida y clima extremo. Estas caracteristicas contribuyen al amuento de la brecha alimenticia.
-    \item \textbf{Método que proponen (aportación)}: Se propone un sistema basado en la nube y el internet de las cosas para controlar y monitorear el microclima de un invernadero. Se conectaron sensores, actuadores y más controles.
-    \item \textbf{Resultados: } Se aumentó la cantidad de cosecha y la calidad del pepino. Además, se logró ahorrar agua y luz con el control automatizado.
-    \item \textbf{Conclusiones: } El sistema ayudó en el control y monitoreo del invernadero dando resultados tangibles.
-\end{itemize}
-
-\subsubsection{A System for the Monitoring and Predicting of Data in Precision Agriculture in a Rose Greenhouse Based on Wireless Sensor Networks}
-\begin{itemize}
-    \item \textbf{Problemática: }
-    El acceso a tecnología de calidad en la agricultura es costoso. Por esta razón, los sistemas de control y monitoreo en la agricultura 
-	solo han estado disponibles para grandes productores. Esto restringe la posibildad de competencia de pequeños y medianos agricultores 
-	al no poder igualar la calidad del producto. Es necesario que se propongan soluciones de bajo costo para la obtención y el procesamiento 
-	de los datos. Todo esto para poder obtener información que pueda aumentar la productividad en la agricultura.
-    \item \textbf{Método que proponen (aportación): } Para facilitar la recolección de información, se propone una una red inalámbrica de 
-	sensores junto con prácticas adecuadas para el manejo de los datos. A partir de estos datos, los autores plantean que se entrenarán 
-	modelos de inteligencia artificial para predecir el clima del invernadero. 
-    \item \textbf{Resultados:}
-    Distintos modelos de inteligencia artificial lograron predecir con un margen de error de menos del 12\% el clima de un invernadero.
-    \item \textbf{Conclusiones:} El sistema propuesto ayudará de manera permanente a los productores de rosas al facilitar la toma de decisiones 
-	basadas en la información. Los ayudará 
-\end{itemize}
-
-\subsubsection{Bayesian networks for greenhouse temperature control}
-\begin{itemize}
-    \item \textbf{Problemática: }
-    Hoy en día la agricultura debe apegarse a una cantidad en aumento de regulaciones en términos de calidad e impacto ambiental.
-	La incorporación de nuevas tecnologías en el sector agropecuario pueden servir como ayuda para cumplir con estas regulaciones.
-    \item \textbf{Método que proponen (aportación): }
-    Los autores proponen implementar una red bayesiana para predecir los principales parámetros que influyen en el clima interior del invernadero 
-	(temperatura del aire, humedad relativa y concentración de CO2).
-    \item \textbf{Resultados: }
-    Se logró realizar un control más homogéneo que con métodos tradicionales, lo cual afecta de una manera favorable al crecimiento del cultivo.
-    \item \textbf{Conclusiones:}
-    Se demostró la aplicabilidad de redes bayesianas para el control de la temperatura del aire dentro de un invernadero. Este control se logró
-	al actuar sobre la apertura de compuertas en el invernadero.
-\end{itemize}
-
-
-\subsubsection{Low-Cost Fuzzy Logic Control for Greenhouse Environments with Web Monitoring}
-\begin{itemize}
-    \item \textbf{Problemática: }
-    Hoy en día la agricultura debe apegarse a una cantidad en aumento de regulaciones en términos de calidad e impacto ambiental.
-	La incorporación de nuevas tecnologías en el sector agropecuario pueden servir como ayuda para cumplir con estas regulaciones.
-    \item \textbf{Método que proponen (aportación): }
-    Los autores proponen implementar una red bayesiana para predecir los principales parámetros que influyen en el clima interior del invernadero 
-	(temperatura del aire, humedad relativa y concentración de CO2).
-    \item \textbf{Resultados: }
-    Se logró realizar un control más homogéneo que con métodos tradicionales, lo cual afecta de una manera favorable al crecimiento del cultivo.
-    \item \textbf{Conclusiones:}
-    Se demostró la aplicabilidad de redes bayesianas para el control de la temperatura del aire dentro de un invernadero. Este control se logró
-	al actuar sobre la apertura de compuertas en el invernadero.
-\end{itemize}
-
-\newpage
-\section{Antecedentes}
-
-"La agricultura es la base de la economía en muchos países, esta provee a la humanidad de algunas de sus necesidades más básicas: comida y fibra" \cite{appsremotesensing}. 
-La demanda de comida y productos derivados de la agricultura está proyectada a incrementar en un 70\% para el año 2050 \cite{wik_pingali_brocai_2008}. 
-La agricultura de precisión (PA por sus siglas en inglés) será clave para poder alcanzar la agricultura sustentable. La PA se puede definir como una 
-estrategia de manejo que implementa la recopilación de información, comunicación entre sistemas y técnicas de análisis de datos para apoyar la toma 
-de decisiones, por ejemplo: aplicación de fertilizantes, control de plagas, control de riego, identificación de enfermedades, entre otros \cite{appsremotesensing}.
-
-La comunicación inalámbrica entre sistemas ha cambiado los estándares de comunicación a día de hoy y la agricultura no se ha quedado atrás. 
-"Para incrementar la eficiencia, productividad y reducir la intervención humana, tiempo y costo existe una necesidad de prestar atención a una
-nueva tecnología llamada Internet de las Cosas (\textit{IoT} por sus siglas en inglés)" \cite{agriculture_automation_review}. El IoT es la red de dispositivos 
-que adquieren y actúan sobre información sin la necesidad de que un humano intervenga \cite{agriculture_automation_review}. 
-
-Los principales componentes de un sistema basado en \textit{IoT} se pueden dividir en 4 capas: dispositivos, red, servicios y aplicación. 
-El \textit{hardware} a implementar es de suma importancia debido a que impacta directamente el costo de la implementación y restringe 
-las tecnologías disponibles. Entre los dispositivos más utilizados están los diferentes Arduinos, Raspberry Pis y el microcontrolador ESP. 
-Los datos obtenidos a través de estos dispositivos son (en su mayoría) enviados a una ubicación central a través de una red alámbrica o inalámbrica.
-Los principales protocolos de red implementados en las redes inalámbricas son: Wi-Fi, Bluetooth, Zigbee y LoRaWAN \cite{systematicreviewiot}. 
-
-En \cite{olive_orchard_monitorization} se implementó una red inalámbrica de sensores de bajo costo para monitorear la temperatura, humedad y concentración de gases 
-del ambiente, además de la humedad del suelo en una plantación de olivos. Se utilizó el sensor DHT 11 para monitorear la temperatura y humedad del ambiente, un
-higrómetro para medir la humedad del suelo y un MQ-135 para detectar gases nocivos (CO2, amoniaco, benzeno, alcohol y humo del fuego). Cada nodo de esta 
-red cuenta con los sensores para realizar las lecturas mencionadas, un microcontrolador y una antena para habilitar la comunicación mediante el protocolo 
-LoRaWAN, todo alimentado por celdas fotovoltaicas. Para el monitoreo de las lecturas, se desarrollaron una aplicación móvil y una interfaz web que 
-muestran los datos en tiempo real.
-
-Es importante monitorear de forma separada la humedad del ambiente como la humedad del suelo debido a que estas no están correlacionadas. Ambas se relacionan
-a enfermedades y plagas, sin embargo, la humedad del ambiente influye en la aparición de enfermedades y la humedad del suelo en la aparición de plagas. También
-es muy valioso contar con mediciones de temperatura cerca del cultivo. De esta manera se tienen datos más precisos que los que proveen los sitios/aplicaciones 
-meteorológicas \cite{olive_orchard_monitorization}.
-
-En la Universidad de Magdalena, Colombia se creó un sistema de bajo costo para monitoreo y control remoto de un invernadero utilizando lógica difusa \cite{low_cost_fuzzy_logic_greenhouse}. La utilización de lógica difusa en sistemas de control permite traducir variables a sets previamente definidos que contienen la 
-terminología difusa como muy frío, frío, caliente, muy caliente, etcétera. Gracias a esta traducción se pueden tomar acciones más precisas para realizar el control \cite{agriculture_automation_review}. El algoritmo difuso se implementó en un Arduino Mega para tomar acciones de control sobre la temperatura y humedad del ambiente, humedad del suelo e iluminación. Además, se diseño un sitio web para realizar el monitoreo y poder tomar acciones que sobre escriban a las decisiones tomadas por el sistema. Se probó la efectividad de la lógica difusa para controlar sistemas no lineales, además de optimizar el uso de recursos en un invernadero \cite{low_cost_fuzzy_logic_greenhouse}.
-
-
-
-\newpage
-\subsection{Definición del problema}
-
-% Sistema de control y monitoreo de un invernadero basado en el Internet de las cosas y logica difusa
-
-La agricultura en Samalayuca, Chihuahua, se basa, en su mayoría, en métodos tradicionales o populares. Esto dificulta que los agricultores
-locales puedan competir contra extranjeros que producen en ambientes controlados y automatizados, ya que no pueden igualar ni la calidad 
-del producto ni la cantidad producida. Lamentablemente, esto afecta aún más a pequeños y medianos productores ya que los sistemas de control 
-y monitoreo son muy costosos.
-
-% La agricultura en Samalayuca, Chihuahua, se basa, en su mayoría, en métodos tradicionales o populares. Esto impacta de forma negativa a los 
-% productores de pequeña o mediana escala ya que no cuentan con las herramientas para tomar decisiones basadas en información. Al no contar con 
-% información, el replicar resultados en temporada tras temporada es complicado.
-
-% Una toma de decisiones informada ayudará a los agricultores a utilizar de una forma más eficiente sus recursos, disminuyendo el costo de producción. 
-% Además, al llevar sistematizar la producción se tendrán resultados replicables temporada tras temporada.
-
-\subsection{Objetivo}
-
-Implementar un sistema de bajo costo para controlar y monitorear el clima de un invernadero.
-
-\section{Justificación}
-
-%Un parrafo debe llevar almenos 2 oraciones
-[Expresa las razones por las cuáles crees/supones es necesario desarrollar el proyecto plasmado en esta propuesta. 
-Deberás describir y dimensionar la necesidad, problema u oportunidad en la cual se centra. 
-Se tiene que establecer la importancia y grado de generalización que puede hacerse de los resultados del proyecto, así como los beneficios derivados de su realización. 
-Aquí deberá incluirse el porqué vale la pena atender el problema, en qué pueden ayudar los resultados, y quiénes se beneficiarán de los mismos. También hay que incluir aquí el impacto que pueda tener en diferentes ámbitos, como el  tecnológico, académico, tecnológico, ecológico, económico,social, ambiental, y así, según corresponda. 
-Se presentan los beneficios que se obtendrían al lograr el objetivo del proyecto de investigación, demostrando por qué es necesario y significativo. 
-Ayuda a identificar las razones que motivan a la realización de este proyecto.]
-\begin{description}
-\item [Impacto Social:] [explica
-\dots]
-
-
-\item [Impacto Tecnológico:]
-[explica
-\dots]
-
-\item [Impacto Académico:] 
-[explica \dots]
-
-\vdots
-
-
-\end{description}
-
-
-\section{Marco teórico}
-%\caption[Texto en lista de figuras sin cita]{Texto en título de imagen con cita.}
-
-[Presentar la teoría que va a fundamentar el proyecto con base en le planteamiento del problema que se ha realizado, los conceptos y conocimientos necesarios para desarrollar el proyecto. Se puede dividir en sub-secciones por cada concepto que se necesite, pero no olvides introducir antes con un párrafo.]
-
-\section{Objetivo general}
-
-[Enunciado que expresa lo que se propone lograr al final del proyecto de investigación. 
-Viene directamente relacionado con el planteamiento del problema y busca ante todo contribuir a solucionarlo. 
-Debe de iniciar con un verbo en infinitivo que exprese una acción medible y alcanzable en un calendario para dos semestres.]
-
-
-\section{Objetivos específicos}
-[Establece los objetivos específicos de la propuesta en forma de lista, lo cuales deben estar relacionados con el Objetivo General. Estos permiten orientar las actividades a realizar, deben ser congruentes entre sí, debidamente jerarquizados, medibles, cuantificables y ser alcanzables, de tal forma que se logre el Objetivo General establecido. Además, deberán iniciar con el verbo principal en infinitivo.
-Es común confundir objetivos Específicos con Metodología: Esta última es una lista de fases o pasos para lograr los objetivos; mientras que estos son características que el producto final deberá exhibir al «usuario final».]
-
-\section{Propuesta de solución}
-
-[Esto se refiere a lo que el usuario final espera recibir.
-Ejemplos de esto pueden ser: un prototipo, un sistema, una biblioteca  (mal llamada ``librería''), un API, un \textit{framework}, un algoritmo, un teorema, un modelo, una metodología; con tales y cuales características.]
-
-
-
-
-\section{Alcances y limitaciones}
-
-[Los alcances nos indican con precisión qué SÍ se puede esperar o cuáles aspectos alcanzaremos en el desarrollo del proyecto; y las limitaciones indican qué aspectos quedan fuera de su cobertura, lo que NO se realizará. 
-En otras palabras, los alcances son las condiciones bajo las cuales tu producto deberá funcionar; y las limitaciones son las condiciones que no cubrirá.]
-
-\section{Metodología}
-[En esta sección se especifican los pasos, basados en el método científico o desarrollo de software, necesarios para alcanzar el objetivo planteado. 
-Cada paso debe de incluir una breve definición, así como una descripción de cómo se realizará.
-Establece de forma organizada y precisa el procedimiento o fases que se han de seguir para llevar a buen término la investigación planteada. 
-Esta debe ser  clara, detallada y consecuente con la realización del proyecto y para el cumplimiento de los objetivos y metas.]
-
-
-
-\section{Programa de Actividades}
-
-[Describe las actividades a realizar y señala los meses necesarios para el logro de las metas establecidas.
-Es un listado que muestra la secuencia de acciones, relacionadas con la metodología, que se prevé llevar a cabo, la duración que tendrán y las fechas en que ocurrirán, demostrando siempre que terminarás en tiempo y forma.]
-
-
-%Agregar dos oraciones a los parrafos
-[De acuerdo a la metodología planteada, se organizan las actividades en base a un periodo de dos semestres correspondientes a la duración del proyecto, cada tarea particular tiene un tiempo aproximado que permita llegar al objetivo de la investigación.
-A continuación se muestra un cronograma de actividades como ejemplo. 
-Además, vale la pena mencionar que existen varios portales en la web donde puedes construir tu tabla \LaTeX de una manera visual, y luego generas y copias el código fuente de la tabla terminada y con estilo a tu documento. Uno de dichos portales es \url{http://www.tablesgenerator.com}]
-
-\begin{table}
-\centering
-\resizebox*{!}{10 cm}{
-\begin{tabular}{|p{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c}
-	\hline 
-	&\rotatebox{90}{Agosto 2016}
-	&\rotatebox{90}{Septiembre 2016}
-	&\rotatebox{90}{Octubre 2016} &\rotatebox{90}{Noviembre 2016} &\rotatebox{90}{Diciembre 2016} &\rotatebox{90}{Enero 2017} &\rotatebox{90}{Febrero 2017} &\rotatebox{90}{Marzo 2017} &\rotatebox{90}{Abril 2017} &\rotatebox{90}{Mayo 2017} &\rotatebox{90}{Junio 2017}
-	&\rotatebox{90}{Julio 2017}
-	&\rotatebox{90}{Agosto 2017}
-	&\rotatebox{90}{Septiembre 2017}
-	&\rotatebox{90}{Octubre 2017}
-	&\rotatebox{90}{Noviembre 2017}
-	&\rotatebox{90}{Diciembre 2017}
-	&\rotatebox{90}{Enero 2018}
-	&\rotatebox{90}{Febrero 2018}
-	&\rotatebox{90}{Marzo 2018}
-	&\rotatebox{90}{Abril 2018}
-	&\rotatebox{90}{Mayo 2018}
-	&\rotatebox{90}{Junio 2018}\\
-	\hline
-	
-	Revisión del estado de la técnica&\checkmark 
-	&\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\  
-	\hline 
-	Selección de la plataforma donde funcionará la aplicación&  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Investigación y aprendizaje de ASP, autómatas a pila y gramáticas&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Documentación de propuesta&  &  &  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark\\ 
-	\hline 
-	Búsqueda de opciones para reconocimiento de voz&  &  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Determinar la herramienta para reconocimiento de voz&  &  &  &  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Integración del modulo de reconocimiento de voz&  &  &  &  &  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Pruebas del módulo de reconocimiento de voz&  &  &  &  &  &  &  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline  
-	Evaluar Freeling y OpenNLP como herramientas para el procesado del lenguaje natural&  &  &  &  &  &  &  &  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	 \hline 
-	Análisis módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline
-	Diseño de módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &  &  &  & \checkmark &\checkmark  &\checkmark  &  &  &  &  &  &  &  &\\ 
-	\hline  
-	Codificación de módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &\\ 
-	\hline  
-	Pruebas de módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &\checkmark  &  &  &  &\\ 
-	\hline  
-	Análisis, diseño, codificación y pruebas de las interfaces visuales&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &  &\checkmark  &\checkmark  &  &\\ 
-	\hline 
-	Integración de los módulos para del prototipo.&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &  &  &  &\checkmark  &\\ 
-	\hline
-	Pruebas de integración y pruebas funcionales del prototipo.&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &  &  &  &  &\checkmark\\ 
-	\hline
-	
-\end{tabular}
-}
-    \caption{Actividades a 24 meses}
-    \label{xx}
-\end{table}
-
-
-[A continuación mostramos otro ejemplo:]
-
-\begin{table}[h]
-    \centering
-\resizebox*{!}{8 cm}{
-\begin{tabular}{|p{6cm}|c|c|c|c|c|c|c|c|c|}
-	\hline 
-	ACTIVIDAD&\rotatebox{90}{Febrero 2018}
-	&\rotatebox{90}{Marzo}
-	&\rotatebox{90}{Abril} 
-    &\rotatebox{90}{Mayo} 
-    &\rotatebox{90}{VACACIONES} 
-    &\rotatebox{90}{Agosto} 
-    &\rotatebox{90}{Septiembre} 
-    &\rotatebox{90}{Octubre} 
-    &\rotatebox{90}{Noviembre 2018}\\
-	\hline
-	Revisión de la Literatura&\checkmark 
-	&\checkmark  &\checkmark  &  &  &  &  & &  \\  
-	\hline
-	Protocolo&\checkmark 
-	&\checkmark  &\checkmark  &  &  &  &  & &  \\  
-	\hline 
-	Selección de software existente&  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  \\ 
-	\hline 
-	Investigación y aprendizaje de Fuzzy Answer Sets&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  & \\ 
-	\hline 
-	Documentación de propuesta&  &  & \checkmark & \checkmark &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  \\ 
-	\hline 
-	Formulación de semántica para razonamiento difuso&  &  &  &  &\checkmark  &\checkmark  &  &  &  \\ 
-	\hline 
-	Evaluación de software existente&  &  & \checkmark &  &  &  &  &  &  \\ 
-    \hline
-	Codificación de prototipo&  &  &  &  & \checkmark & \checkmark &  &  &   \\ 
-	\hline  
-	Pruebas de prototipo&  &  &  &  &  &  & \checkmark &  &   \\ 
-	\hline 
-	Presentación y defensa de trabajo&  &  &  &  &  &  &  &  & \checkmark  \\ 
-	\hline
-\end{tabular}}
-    \caption{Actividades a nueve meses}
-    \label{nueve}
-\end{table}
-
-
-
-
-
-[En cuanto a las referencias, estas deberán escribirse en formato de acuerdo a IEEE, y puedes aprovechar el manejo automático de \LaTeX\xspace integrado con Mendeley. Alternativamente las puedes editar a mano (a pie), para lo cual te recomendamos usar un archivo separado, como en esta plantilla el de sample.bib
-% Así \cite{Van-Dongen12} es como citamos una referencia de las que vienen en dicho archivo; así \cite{Mittelbach04} es como citamos una secuencia de ellas.]
-
-Esta plantilla fue proveída originalmente por el Dr. Juan Carlos Acosta Guadarrama.
-
-
-\bibliography{references/misreferencias}
+% \tableofcontents
+% \clearpage
+% \listoffigures
+% \clearpage
+% \listoftables
+% \clearpage
+
+\include{capitulos/resumen}
+\include{capitulos/intro}
+\include{capitulos/planteamiento}
+\include{capitulos/justificacion}
+\include{capitulos/marco_teorico}
+\include{capitulos/objetivo_general}
+\include{capitulos/objetivos_especificos}
+\include{capitulos/propuesta}
+\include{capitulos/alcance}
+\include{capitulos/actividades}
+
+\bibliography{referencias}
 \bibliographystyle{ieeetr}
-% \renewcommand*{\UrlFont}{\rmfamily}
-
 
 \clearpage
 \appendix
+\input{capitulos/apendice}
 
 
-\section{Apéndice}
-[En esta sección opcional se incluye información secundaria o material importante que es muy extenso. El apéndice se coloca después de la literatura citada y no debe llevar introducción ni conclusión ni mayor explicación excepto su título y en el texto donde se hace referencia al apéndice. 
-Ejemplos de información que puede colocarse en el apéndice: código fuente completo, copia del  convenio con la maquila donde les estás desarrollando esta propuesta; una lista de ejemplares y los museos donde están depositados, los datos obtenidos de todas las repeticiones del experimento, derivaciones matemáticas extensas, todos los resultados del análisis estadístico (incluyendo quizás los no significativos) y mapas de distribución para cada caso estudiado. 
-
- 
 \end{document}
