--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -16,7 +16,6 @@
 \title{[TÍTULO DEL PROYECTO DE INVESTIGACIÓN]}
 \author{[Nombre del alumno]} 
 
-
 \begin{document}
 \include{capitulos/portada}
 
@@ -38,6 +37,7 @@
 \include{capitulos/objetivos_especificos}
 \include{capitulos/propuesta}
 \include{capitulos/alcance}
+\include{capitulos/metodologia}
 \include{capitulos/actividades}
 
 \bibliography{referencias}
